--- a/preference.html
+++ b/preference.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GP PET Template</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="https://api.greenpeace.org.hk/2020/registration/styles.028d4201.css">
+    <link rel="stylesheet" href="styles.028d4201.css">
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!--[if IE]>
@@ -142,6 +142,6 @@
       </div>
     </footer>
     <!-- scripts -->
-    <script src="https://api.greenpeace.org.hk/2020/registration/main.417db390.js"></script>
+    <script src="main.417db390.js"></script>
   </body>
 </html>
