--- a/registration.html
+++ b/registration.html
@@ -50,7 +50,7 @@
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="https://api.greenpeace.org.hk/2020/registration/styles.028d4201.css">
+    <link rel="stylesheet" href="styles.028d4201.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
@@ -144,14 +144,14 @@
               </p>
               <div class="speakers">
                 <div class="speaker">
-                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/e271d42d-daphne-wong-profile.jpg" alt="">
+                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/ce98c922-daphnewong.jpg" alt="黃遂心 Daphne">
                   <div class="px-6 py-4">
                     <h3>黃遂心 Daphne</h3>
                     <span class="text-sm text-gray-700">紀錄片導演</span>
                   </div>
                 </div>
                 <div class="speaker">
-                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/0a3d61a0-leung_pic.png" alt="">
+                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/90e7454b-leung_pic.jpg" alt="梁榮武">
                   <div class="px-6 py-4">
                     <h3>梁榮武</h3>
                     <span class="text-sm text-gray-700">氣象學家<br>
@@ -160,7 +160,7 @@
                   </div>
                 </div>
                 <div class="speaker">
-                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/98d6d0cc-lance02.png" alt="">
+                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/afd8cb67-lance02.jpg" alt="劉衍一 Lance Lau">
                   <div class="px-6 py-4">
                     <h3>劉衍一 Lance Lau</h3>
                     <span class="text-sm text-gray-700">香港年輕氣候行動者</span>
@@ -231,7 +231,7 @@
                   </div>
                 </form>
                 <!-- end of EN form -->
-                <div class="mt-4">
+                <div class="form-footer mt-4">
                   <span class="text-sm">*
                     登記是次活動即代表我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<a class="underline" href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/" target="_blank">個人資料政策</a>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span>
                 </div>
@@ -267,6 +267,6 @@
       </div>
     </footer>
     <!-- scripts -->
-    <script src="https://api.greenpeace.org.hk/2020/registration/main.417db390.js"></script>
+    <script src="main.417db390.js"></script>
   </body>
 </html>
