--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GP PET Template</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="styles.028d4201.css">
+    <link rel="stylesheet" href="styles.0eb081c5.css">
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- Add your site or application content here -->
-    <header class="header">
-      <div class="container mx-auto flex items-center justify-start">
-        <img class="logo bg-gray-100" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png" alt="logo">
+    <!-- header -->
+    <header class="header header--green">
+      <div class="container mx-auto flex items-center justify-between">
+        <div>
+          <img class="logo logo--green" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png" alt="logo">
+          <img class="logo logo--white" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png" alt="logo">
+        </div>
+        <div class="nav-button">
+          <a class="btn" data-scroll="" href="#form-container">立即登記</a>
+        </div>
       </div>
     </header>
+    <!-- end of header -->
     <main id="app" class="main">
       <section class="min-h-screen relative">
         <div class="flex flex-wrap">
@@ -303,6 +311,7 @@
         </div>
       </article>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <div class="container mx-auto">
         <div class="flex flex-wrap">
@@ -323,6 +332,7 @@
         </div>
       </div>
     </footer>
+    <!-- end of footer -->
     <!-- scripts -->
     <script src="main.417db390.js"></script>
   </body>
