--- a/preference.html
+++ b/preference.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GP PET Template</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="styles.028d4201.css">
+    <link rel="stylesheet" href="styles.0eb081c5.css">
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!--[if IE]>
@@ -17,11 +17,19 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <header class="header">
-      <div class="container mx-auto flex items-center justify-start">
-        <img class="logo" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png" alt="logo">
+   <!-- header -->
+   <header class="header header--green">
+    <div class="container mx-auto flex items-center justify-between">
+      <div>
+        <img class="logo logo--green" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png" alt="logo">
+        <img class="logo logo--white" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png" alt="logo">
       </div>
-    </header>
+      <div class="nav-button">
+        <a class="btn" data-scroll="" href="#form-container">立即登記</a>
+      </div>
+    </div>
+  </header>
+  <!-- end of header -->
     <main id="app" class="main">
       <section class="preference min-h-screen relative">
         <div class="container">
