--- a/cooking.html
+++ b/cooking.html
@@ -35,8 +35,8 @@
 })(window, document, 'script', 'dataLayer', 'GTM-M6LZL75');</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 |
-      香港
+    <title>
+      「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 | 香港
     </title>
     <meta name="author" content="Greenpeace 綠色和平">
     <meta name="description" content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。">
@@ -50,9 +50,10 @@
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="styles.0eb081c5.css">
+    <link rel="stylesheet" href="styles.0a0bdd00.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
+
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBV2LPD" height="0" width="0" style="display: none; visibility: hidden;"></iframe></noscript>
@@ -98,18 +99,16 @@
               </div>
               <div class="line"></div>
               <p class="text">
-                綠色和平將舉辦<strong>「梁祖堯教你煮：母親節走塑大餐」線上教室</strong>，邀請到煮食兼綠色生活達人<strong>梁祖堯
-                (Joey)
-                擔任大廚，直播親授「零失手」的烹飪秘訣 ——「西式素食2道菜套餐」</strong>；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。
+                綠色和平將舉辦<strong>「梁祖堯教你煮：母親節走塑大餐」線上教室</strong>，邀請到煮食兼綠色生活達人梁祖堯（Joey）擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。
               </p>
               <p class="text">
                 不妨趁母親節前，學習烹調兩道美味素菜，同時為「大地之母」著想，選購無預先包裝的食材，培養走塑習慣，為環境出一分力。
               </p>
               <p class="text">
-                <strong>綠色和平線上「梁祖堯教你煮：母親節走塑大餐」烹飪班詳情：</strong>
+                綠色和平線上「梁祖堯教你煮：母親節走塑大餐」烹飪班詳情：
               </p>
-              <div class="event-details my-8 bg-white">
-                <table class="table-auto">
+              <div class="event-details my-6 bg-white">
+                <table class="table-auto w-full">
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
@@ -135,25 +134,25 @@
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>星級大廚：</strong><br>
-                        <div class="speaker pt-8 pb-4">
-                        <img class="speaker__avatar h-40 w-40" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg" alt="梁祖堯">
-                        <div class="px-6 py-4">
-                          <h3>梁祖堯</h3>
-                          <span class="text-sm text-gray-700">煮食兼綠色生活達人</span>
+                        <strong>星級大廚：</strong>
+                        <div class="speaker">
+                          <img class="speaker__avatar h-40 w-40" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg" alt="梁祖堯">
+                          <div class="px-6 py-4">
+                            <h3>梁祖堯</h3>
+                            <span class="text-sm text-gray-700">煮食兼綠色生活達人</span>
+                          </div>
                         </div>
-                      </div>
-                      <p class="text">
-                        煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是本地茄子迷你薄餅和番薯栗子酥皮卷，配車厘茄牛油果意粉。</p>
-                        <p class="text">
-                          <a class="underline font-bold" data-scroll="" href="#form-container">立即報名</a>參加烹飪班，學煮素食料理，並與導師即席對談，名額有限：
-                        </p>
                       </td>
                     </tr>
                   </tbody>
                 </table>
               </div>
-
+              <p class="text">
+                煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是本地茄子迷你薄餅和番薯栗子酥皮卷，配車厘茄牛油果意粉。
+              </p>
+              <p class="text mb-8">
+                <a class="underline font-bold" data-scroll="" href="#form-container">立即報名參加烹飪班</a>，學煮素食料理，並與導師即席對談，名額有限：
+              </p>
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
@@ -205,11 +204,9 @@
                           </div>
                         </div>
                         <input type="hidden" class="en__field__input en__field__input--hidden" name="supporter.NOT_TAGGED_46" value="HK">
-
                         <input type="hidden" class="en__field__input en__field__input--hidden" name="supporter.NOT_TAGGED_9" value="zh">
-
                         <div class="en__submit">
-                          <button style="" class="btn btn-block btn-round btn--download">
+                          <button class="btn btn-block btn-round btn--download">
                             立即登記
                           </button>
                         </div>
@@ -224,7 +221,9 @@
                 </div>
               </div>
               <div class="my-8">
-                <span class="text-sm">* 烹飪班將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取 Zoom 鏈結。</span>
+                <span class="text-sm">*
+                  烹飪班將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
+                  Zoom 鏈結。</span>
               </div>
             </div>
           </div>
