--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GP PET Template</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="styles.0eb081c5.css">
+    <link rel="stylesheet" href="styles.0a0bdd00.css">
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-  <!-- Add your site or application content here -->
+      <p class="browserupgrade">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
+        your experience and security.
+      </p>
+    <![endif]-->
+    <!-- Add your site or application content here -->
     <!-- header -->
     <header class="header header--green">
       <div class="container mx-auto flex items-center justify-between">
@@ -35,27 +39,37 @@
             <div class="px-4">
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8 mb-4">
-                  <h1 class="text-4xl font-bold">Building a Visual Language<p class="text-base text-gray-700 mt-2">Behind the scenes of our new design system</p></h1>
+                  <h1 class="text-4xl font-bold">
+                    Building a Visual Language
+                    <p class="text-base text-gray-700 mt-2">
+                      Behind the scenes of our new design system
+                    </p>
+                  </h1>
                 </div>
                 <div class="md:hidden w-full flex flex-wrap justify-between items-center">
                   <div class="participants mr-2">
                     <ul class="text-gray-700 text-sm">
-                      <li><span class="font-bold">Chris Chan</span> has signed</li>
-                      <li><span class="font-bold">Chris Chan</span> has signed</li>
-                      <li><span class="font-bold">Chris Chan</span> has signed</li>
+                      <li>
+                        <span class="font-bold">Chris Chan</span> has signed
+                      </li>
+                      <li>
+                        <span class="font-bold">Chris Chan</span> has signed
+                      </li>
+                      <li>
+                        <span class="font-bold">Chris Chan</span> has signed
+                      </li>
                     </ul>
                   </div>
                   <div class="badge">
                     <div class="badge-image-wrapper w-full h-full">
                       <img class="mx-auto h-32 w-32 rounded-full object-cover" src="https://peoplevsoil.org/zh-HK/assets/files/shared/slideshow/GP0STPBDA_PressMedia.jpg" alt="badge">
-                    <div class="absolute left-0 top-0 w-full h-full inset-y-auto circle-progress-bar">
-                      <svg class="w-full h-full fill-current text-transparent" viewBox="0 0 100 100">
-                        <circle cx="50" cy="50" r="46" fill="none" stroke="white" stroke-opacity="0.3" stroke-width="3"></circle>
-                        <circle cx="50" cy="50" r="46" fill="none" stroke="white" stroke-width="4" stroke-dasharray="200" stroke-dashoffset="30"></circle>
-                      </svg>
+                      <div class="absolute left-0 top-0 w-full h-full inset-y-auto circle-progress-bar">
+                        <svg class="w-full h-full fill-current text-transparent" viewBox="0 0 100 100">
+                          <circle cx="50" cy="50" r="46" fill="none" stroke="white" stroke-opacity="0.3" stroke-width="3"></circle>
+                          <circle cx="50" cy="50" r="46" fill="none" stroke="white" stroke-width="4" stroke-dasharray="200" stroke-dashoffset="30"></circle>
+                        </svg>
+                      </div>
                     </div>
-                    </div>
-
                   </div>
                 </div>
               </div>
@@ -66,18 +80,21 @@
                 ipsum nam, dignissimos repellat nesciunt sit cupiditate
                 molestiae odit ab, voluptate consequatur id.
               </p>
-              <button class="md:hidden mt-3 mb-6 w-full shadow bg-gporange text-white text-center font-bold py-4 px-4 rounded">Sign the petition</button>
+              <button class="md:hidden mt-3 mb-6 w-full shadow bg-gporange text-white text-center font-bold py-4 px-4 rounded">
+                Sign the petition
+              </button>
               <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
                 officiis magni autem laboriosam earum, adipisci itaque odio
                 ipsum nam, dignissimos repellat nesciunt sit cupiditate
                 molestiae odit ab, voluptate consequatur id.
               </p>
+              <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
                 sit iste possimus dolorem illo, animi est enim, sint eos odio ab
                 eveniet id quasi deleniti ex excepturi deserunt voluptatibus
                 nemo.
-              <p></p>
+              </p>
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
@@ -112,18 +129,18 @@
                   <input type="text" class="form-input" placeholder="電郵地址 Email Address">
                 </div>
                 <div class="form-row flex items-end">
-                    <div class="flex-none">
-                      <input class="w-16 form-input" type="text" placeholder="852" value="852">
-                    </div>
-                    <div class="flex-none mb-3">
-                      <span class="mx-2 text-gray-400 pointer-events-none">-</span>
-                    </div>
-                    <div class="flex-1">
-                      <label class="form-label">
-                        聯絡電話 Mobile Number
-                      </label>
-                      <input class="form-input" type="text" placeholder="聯絡電話 Mobile Number">
-                    </div>
+                  <div class="flex-none">
+                    <input class="w-16 form-input" type="text" placeholder="852" value="852">
+                  </div>
+                  <div class="flex-none mb-3">
+                    <span class="mx-2 text-gray-400 pointer-events-none">-</span>
+                  </div>
+                  <div class="flex-1">
+                    <label class="form-label">
+                      聯絡電話 Mobile Number
+                    </label>
+                    <input class="form-input" type="text" placeholder="聯絡電話 Mobile Number">
+                  </div>
                 </div>
                 <div class="form-row">
                   <label class="form-label">
@@ -195,7 +212,8 @@
             <h2>
               堅守香港海洋最後一道防線
             </h2>
-          </div><form class="form-body">
+          </div>
+          <form class="form-body">
             <div class="mb-8 form-row text-center">
               <h2 class="text-2xl font-bold">Make a change</h2>
               <p class="text-base">
@@ -225,18 +243,18 @@
               <input type="text" class="form-input" placeholder="電郵地址 Email Address">
             </div>
             <div class="form-row flex items-end">
-                <div class="flex-none">
-                  <input class="w-16 form-input" type="text" placeholder="852" value="852">
-                </div>
-                <div class="flex-none mb-3">
-                  <span class="mx-2 text-gray-400 pointer-events-none">-</span>
-                </div>
-                <div class="flex-1">
-                  <label class="form-label">
-                    聯絡電話 Mobile Number
-                  </label>
-                  <input class="form-input" type="text" placeholder="聯絡電話 Mobile Number">
-                </div>
+              <div class="flex-none">
+                <input class="w-16 form-input" type="text" placeholder="852" value="852">
+              </div>
+              <div class="flex-none mb-3">
+                <span class="mx-2 text-gray-400 pointer-events-none">-</span>
+              </div>
+              <div class="flex-1">
+                <label class="form-label">
+                  聯絡電話 Mobile Number
+                </label>
+                <input class="form-input" type="text" placeholder="聯絡電話 Mobile Number">
+              </div>
             </div>
             <div class="form-row">
               <label class="form-label">
