--- a/src/preference.html
+++ b/src/preference.html
@@ -22,15 +22,27 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <header class="header">
-      <div class="container mx-auto flex items-center justify-start">
+   <!-- header -->
+   <header class="header header--green">
+    <div class="container mx-auto flex items-center justify-between">
+      <div>
         <img
-          class="logo"
+          class="logo logo--green"
           src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png"
           alt="logo"
         />
+        <img
+          class="logo logo--white"
+          src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png"
+          alt="logo"
+        />
       </div>
-    </header>
+      <div class="nav-button">
+        <a class="btn" data-scroll href="#form-container">立即登記</a>
+      </div>
+    </div>
+  </header>
+  <!-- end of header -->
     <main id="app" class="main">
       <section class="preference min-h-screen relative">
         <div class="container">
