--- a/src/cooking.html
+++ b/src/cooking.html
@@ -42,22 +42,22 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>
-      「地球日環保紀錄片節」開幕紀錄片線上映後座談會 - Greenpeace 綠色和平 |
-      香港
+      「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 | 香港
     </title>
     <meta name="author" content="Greenpeace 綠色和平" />
     <meta
       name="description"
-      content="適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港 Facebook 平台免費直播本地紀錄片《白海豚失樂園 Breathing Room》"
+      content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。"
     />
     <meta
       property="og:title"
-      content="「地球日環保紀錄片節」開幕紀錄片線上映後座談會 - Greenpeace 綠色和平 | 香港"
+      content="「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 |
+      香港"
     />
     <meta property="og:site_name" content="Greenpeace 綠色和平" />
     <meta
       property="og:description"
-      content="適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港 Facebook 平台免費直播本地紀錄片《白海豚失樂園 Breathing Room》"
+      content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。"
     />
     <meta
       property="og:image"
@@ -83,6 +83,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
     ></script>
   </head>
+
   <body
     class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen"
   >
@@ -132,59 +133,44 @@
             <div class="cover-image relative">
               <img
                 class="w-full"
-                src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/20200416-earth-day-promotion.jpg"
-                alt=""
+                src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/9532efdf-thumnail.jpeg"
+                alt="「梁祖堯教你煮：母親節走塑大餐」線上烹飪班"
               />
             </div>
             <div class="px-4">
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8">
                   <h1 class="text-4xl font-bold">
-                    地球日環保紀錄片節
-                    <p class="text-2xl mt-2 text-gray-700">
-                      開幕紀錄片線上放映暨映後座談會
+                    「梁祖堯教你煮：母親節走塑大餐」線上烹飪班
+                    <p class="text-2xl mt-2 text-gray-500">
+                      親授「零失手」的烹飪秘訣 ——「西式素食2道菜套餐」
                     </p>
                   </h1>
                 </div>
               </div>
               <div class="line"></div>
               <p class="text">
-                適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港
-                Facebook 平台免費直播本地紀錄片<strong
-                  >《白海豚失樂園 Breathing Room》</strong
-                >作開幕紀錄片。
+                綠色和平將舉辦<strong>「梁祖堯教你煮：母親節走塑大餐」線上教室</strong>，邀請到煮食兼綠色生活達人梁祖堯（Joey）擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。
               </p>
               <p class="text">
-                <strong>
-                  我們更有幸邀請到氣象學家、香港天文台前助理台長梁榮武、開幕紀錄片導演黃遂心及香港年輕氣候行動者劉衍一
-                  （Lance
-                  Lau）出席線上映後座談會，與您即時對話，討論填海對海洋生態的影響、保育與發展如何取得平衡。</strong
-                >
+                不妨趁母親節前，學習烹調兩道美味素菜，同時為「大地之母」著想，選購無預先包裝的食材，培養走塑習慣，為環境出一分力。
               </p>
               <p class="text">
-                綠色和平<strong>「地球日環保紀錄片節」</strong>開幕紀錄片分享會及映後座談會
-                * 詳情：
+                綠色和平線上「梁祖堯教你煮：母親節走塑大餐」烹飪班詳情：
               </p>
-              <div class="event-details my-8 bg-white">
-                <table class="table-auto">
+              <div class="event-details my-6 bg-white">
+                <table class="table-auto w-full">
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
-                        <strong>日期：</strong> 2020年4月22日（世界地球日）
+                        <strong>日期：</strong> 2020年5月3日
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>映後座談會平台：</strong> Google Hangouts
-                        Meet（網上登記後會獲得相關鏈結）
-                      </td>
-                    </tr>
-                    <tr class="">
-                      <td class="border px-4 py-4">
-                        <strong>嘉賓：</strong>
-                        氣象學家、香港天文台前助理台長梁榮武；《白海豚失樂園
-                        Breathing
-                        Room》導演黃遂心及香港年輕氣候行動者劉衍一（Lance Lau）
+                        <strong>時間：</strong>
+                        煮食烹飪班 - 下午2時至3時 與梁祖堯即席交流 -
+                        下午3時至3時半
                       </td>
                     </tr>
                     <tr class="">
@@ -192,59 +178,44 @@
                         <strong>時間：</strong> 晚上7:45 - 8:30
                       </td>
                     </tr>
+                    <tr class="">
+                      <td class="border px-4 py-4">
+                        <strong>烹飪班平台：</strong
+                        >Zoom（網上登記後會獲得相關鏈結和密碼）
+                      </td>
+                    </tr>
+                    <tr class="">
+                      <td class="border px-4 py-4">
+                        <strong>星級大廚：</strong>
+                        <div class="speaker">
+                          <img
+                            class="speaker__avatar h-40 w-40"
+                            src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg"
+                            alt="梁祖堯"
+                          />
+                          <div class="px-6 py-4">
+                            <h3>梁祖堯</h3>
+                            <span class="text-sm text-gray-700"
+                              >煮食兼綠色生活達人</span
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
+              <p class="text">
+                煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是本地茄子迷你薄餅和番薯栗子酥皮卷，配車厘茄牛油果意粉。
+              </p>
               <p class="text mb-8">
                 <a
                   class="underline font-bold"
                   data-scroll
                   href="#form-container"
-                  >立即報名</a
-                >參加「地球日環保紀錄片節」開幕紀錄片映後座談會，與三位嘉賓即席對談，<strong
-                  >名額僅限250個!</strong
-                >
+                  >立即報名參加烹飪班</a
+                >，學煮素食料理，並與導師即席對談，名額有限：
               </p>
-              <div class="speakers">
-                <div class="speaker">
-                  <img
-                    class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/ce98c922-daphnewong.jpg"
-                    alt="黃遂心 Daphne"
-                  />
-                  <div class="px-6 py-4">
-                    <h3>黃遂心 Daphne</h3>
-                    <span class="text-sm text-gray-700">紀錄片導演</span>
-                  </div>
-                </div>
-                <div class="speaker">
-                  <img
-                    class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/90e7454b-leung_pic.jpg"
-                    alt="梁榮武"
-                  />
-                  <div class="px-6 py-4">
-                    <h3>梁榮武</h3>
-                    <span class="text-sm text-gray-700"
-                      >氣象學家<br />
-                      香港天文台前助理台長
-                    </span>
-                  </div>
-                </div>
-                <div class="speaker">
-                  <img
-                    class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/afd8cb67-lance02.jpg"
-                    alt="劉衍一 Lance Lau"
-                  />
-                  <div class="px-6 py-4">
-                    <h3>劉衍一 Lance Lau</h3>
-                    <span class="text-sm text-gray-700"
-                      >香港年輕氣候行動者</span
-                    >
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
@@ -255,7 +226,7 @@
               >
                 <div class="form-header">
                   <p class="text-sm">
-                    立即報名「地球日環保紀錄片節」開幕紀錄片線上映後座談會
+                    立即報名：「梁祖堯教你煮：母親節走塑大餐」線上烹飪班
                   </p>
                 </div>
                 <!-- EN form -->
@@ -392,19 +363,14 @@
                           name="supporter.NOT_TAGGED_46"
                           value="HK"
                         />
-
                         <input
                           type="hidden"
                           class="en__field__input en__field__input--hidden"
                           name="supporter.NOT_TAGGED_9"
                           value="zh"
                         />
-
                         <div class="en__submit">
-                          <button
-                            style=""
-                            class="btn btn-block btn-round btn--download"
-                          >
+                          <button class="btn btn-block btn-round btn--download">
                             立即登記
                           </button>
                         </div>
@@ -428,8 +394,8 @@
               <div class="my-8">
                 <span class="text-sm"
                   >*
-                  映後座談會將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與嘉賓對談，請務必網上登記，以獲取
-                  Google Hangouts Meet 鏈結。</span
+                  烹飪班將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
+                  Zoom 鏈結。</span
                 >
               </div>
             </div>
