--- a/cooking.html
+++ b/cooking.html
@@ -44,7 +44,7 @@
       香港">
     <meta property="og:site_name" content="Greenpeace 綠色和平">
     <meta property="og:description" content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。">
-    <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/20200416-earth-day-promotion.jpg">
+    <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/9532efdf-thumnail.jpeg">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="192994240714848">
     <!-- meta tag-->
