--- a/cooking.html
+++ b/cooking.html
@@ -150,9 +150,6 @@
               <p class="text">
                 煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是本地茄子迷你薄餅和番薯栗子酥皮卷，配車厘茄牛油果意粉。
               </p>
-              <p class="text mb-8">
-                <a class="underline font-bold" data-scroll="" href="#form-container">立即報名參加烹飪班</a>，學煮素食料理，並與導師即席對談，名額有限：
-              </p>
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
@@ -222,7 +219,7 @@
               </div>
               <div class="my-8">
                 <span class="text-sm">*
-                  烹飪班將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
+                  煮食教室將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
                   Zoom 鏈結。</span>
               </div>
             </div>
