--- a/cooking.html
+++ b/cooking.html
@@ -50,7 +50,7 @@
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="styles.0a0bdd00.css">
+    <link rel="stylesheet" href="styles.75cc1b2b.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
 
@@ -135,7 +135,7 @@
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>星級大廚：</strong>
-                        <div class="speaker">
+                        <div class="speaker mt-4">
                           <img class="speaker__avatar h-40 w-40" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg" alt="梁祖堯">
                           <div class="px-6 py-4">
                             <h3>梁祖堯</h3>
@@ -148,8 +148,30 @@
                 </table>
               </div>
               <p class="text">
-                煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是本地茄子迷你薄餅和番薯栗子酥皮卷，配車厘茄牛油果意粉。
+                煮食兼綠色生活達人梁祖堯將教您烹調母親節素食大餐，包括前菜及主食，分別是「本地茄子迷你薄餅」和「番薯栗子酥皮卷，配車厘茄牛油果意粉」。
               </p>
+              <div class="dishes mb-8" style="display: grid;
+
+grid-gap: 16px;
+
+grid-template-rows: 1fr;
+
+grid-template-columns: auto;
+
+grid-auto-flow: column;
+                ">
+                <div>
+                  <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/76ef54f2-shutterstock_1702154842.jpg" alt="番薯栗子酥皮卷，配車厘茄牛油果意粉">
+                </div>
+                <div>
+                  <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/8de2c953-shutterstock_1707861034.jpg" alt="本地茄子迷你薄餅">
+                  <div class="flex flex-col items-end justify-end text-base text-gpgreen mt-4 py-4">
+                    <p class="font-bold mb-4">「本地茄子迷你薄餅」</p>
+                    <p class="font-bold">「番薯栗子酥皮卷，配車厘茄牛油果意粉」</p>
+                  <p></p>
+                </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
