--- a/src/cooking.html
+++ b/src/cooking.html
@@ -163,7 +163,7 @@
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
-                        <strong>日期：</strong> 2020年5月3日
+                        <strong>日期：</strong> 2020年5月3日（星期日）
                       </td>
                     </tr>
                     <tr class="">
