--- a/cooking.html
+++ b/cooking.html
@@ -36,14 +36,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
-      「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 | 香港
+      「梁祖堯教你煮：母親節走塑大餐」線上教室 - Greenpeace 綠色和平 | 香港
     </title>
     <meta name="author" content="Greenpeace 綠色和平">
-    <meta name="description" content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。">
-    <meta property="og:title" content="「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 |
+    <meta name="description" content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上教室，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。">
+    <meta property="og:title" content="「梁祖堯教你煮：母親節走塑大餐」線上教室 - Greenpeace 綠色和平 |
       香港">
     <meta property="og:site_name" content="Greenpeace 綠色和平">
-    <meta property="og:description" content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。">
+    <meta property="og:description" content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上教室，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。">
     <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/9532efdf-thumnail.jpeg">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="192994240714848">
@@ -84,13 +84,13 @@
         <div class="flex flex-wrap">
           <div class="w-full md:w-1/2 lg:w-2/3">
             <div class="cover-image relative">
-              <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/9532efdf-thumnail.jpeg" alt="「梁祖堯教你煮：母親節走塑大餐」線上烹飪班">
+              <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/9532efdf-thumnail.jpeg" alt="「梁祖堯教你煮：母親節走塑大餐」線上教室">
             </div>
             <div class="px-4">
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8">
                   <h1 class="text-4xl font-bold">
-                    「梁祖堯教你煮：母親節走塑大餐」線上烹飪班
+                    「梁祖堯教你煮：母親節走塑大餐」線上教室
                     <p class="text-2xl mt-2 text-gray-500">
                       親授「零失手」的烹飪秘訣 ——「西式素食2道菜套餐」
                     </p>
@@ -112,7 +112,7 @@
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
-                        <strong>日期：</strong> 2020年5月3日
+                        <strong>日期：</strong> 2020年5月3日（星期日）
                       </td>
                     </tr>
                     <tr class="">
@@ -180,7 +180,7 @@ grid-auto-flow: column;
               <div class="px-4 py-8 border bg-white rounded shadow-md overflow-hidden form-container" id="form-container">
                 <div class="form-header">
                   <p class="text-sm">
-                    立即報名：「梁祖堯教你煮：母親節走塑大餐」線上烹飪班
+                    立即報名：「梁祖堯教你煮：母親節走塑大餐」線上教室
                   </p>
                 </div>
                 <!-- EN form -->
