--- a/src/cooking.html
+++ b/src/cooking.html
@@ -42,22 +42,22 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>
-      「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 | 香港
+      「梁祖堯教你煮：母親節走塑大餐」線上教室 - Greenpeace 綠色和平 | 香港
     </title>
     <meta name="author" content="Greenpeace 綠色和平" />
     <meta
       name="description"
-      content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。"
+      content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上教室，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。"
     />
     <meta
       property="og:title"
-      content="「梁祖堯教你煮：母親節走塑大餐」線上烹飪班 - Greenpeace 綠色和平 |
+      content="「梁祖堯教你煮：母親節走塑大餐」線上教室 - Greenpeace 綠色和平 |
       香港"
     />
     <meta property="og:site_name" content="Greenpeace 綠色和平" />
     <meta
       property="og:description"
-      content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上烹飪班，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。"
+      content="綠色和平將舉辦「梁祖堯教你煮：母親節走塑大餐」線上教室，邀請到煮食兼綠色生活達人梁祖堯 (Joey) 擔任大廚，直播親授「零失手」的烹飪秘訣——「西式素食2道菜套餐」；並與您即時對話，暢談選購無塑、健康的本地食材以及日常走塑生活心得。"
     />
     <meta
       property="og:image"
@@ -134,14 +134,14 @@
               <img
                 class="w-full"
                 src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/9532efdf-thumnail.jpeg"
-                alt="「梁祖堯教你煮：母親節走塑大餐」線上烹飪班"
+                alt="「梁祖堯教你煮：母親節走塑大餐」線上教室"
               />
             </div>
             <div class="px-4">
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8">
                   <h1 class="text-4xl font-bold">
-                    「梁祖堯教你煮：母親節走塑大餐」線上烹飪班
+                    「梁祖堯教你煮：母親節走塑大餐」線上教室
                     <p class="text-2xl mt-2 text-gray-500">
                       親授「零失手」的烹飪秘訣 ——「西式素食2道菜套餐」
                     </p>
@@ -251,7 +251,7 @@
               >
                 <div class="form-header">
                   <p class="text-sm">
-                    立即報名：「梁祖堯教你煮：母親節走塑大餐」線上烹飪班
+                    立即報名：「梁祖堯教你煮：母親節走塑大餐」線上教室
                   </p>
                 </div>
                 <!-- EN form -->
