--- a/email/cooking/cooking-confirmation.html
+++ b/email/cooking/cooking-confirmation.html
@@ -165,11 +165,8 @@
       }
     </style>
   </head>
-
   <body data-gramm="false">
-    <!-- template -->
-    <!-- end of template -->
-    <!--  logo -->
+    <!-- template --><!-- end of template --><!--  logo -->
     <table
       align="center"
       bgcolor="#ffffff"
@@ -223,8 +220,8 @@
         </tr>
       </tbody>
     </table>
-    <!--  end logo -->
-    <!-- main story -->
+    <!--  end logo --><!-- main story -->
+
     <table
       align="center"
       bgcolor="#ffffff"
@@ -313,7 +310,8 @@
                           font-weight: bold;
                           color: #66cc00;
                         "
-                        >2020年5月3日 星期日 | 2pm - 3:30pm</strong
+                        >2020年5月3日 星期日<br />
+                        2pm - 3:30pm</strong
                       ></span
                     >
                   </td>
@@ -372,7 +370,8 @@
                         href="https://bit.ly/2XXAgdh"
                         target="_blank"
                         >個人鏈結</a
-                      ><br />密碼將於活動當天透過電郵發短訊傳送給你。。<br />
+                      ><br />
+                      密碼將於活動當天透過電郵發短訊傳送給你。<br />
                       如欲邀請好友參加是次映後座談會，請分享<a
                         href="https://act.greenpeace.org/page/59859/petition/1"
                         target="_blank"
@@ -568,7 +567,8 @@
                       "
                       ><strong style="font-size: 16px; font-weight: bold;"
                         >前菜：本地茄子迷你薄餅</strong
-                      ><br /><br />
+                      ><br />
+                      <br />
                       所需材料：茄子1個、車厘茄20粒、蕃茄意粉醬8湯匙、羅勒1束、薄餅碎芝士（Pizza
                       Mix Cheese）50 g
                     </span>
@@ -604,7 +604,8 @@
                       "
                       ><strong style="font-size: 16px; font-weight: bold;"
                         >主菜：番薯栗子酥皮卷，配車厘茄牛油果意粉</strong
-                      ><br /><br />
+                      ><br />
+                      <br />
                       所需材料：去皮栗子6粒、黃心番薯1個、酥皮1塊、雞蛋1隻、意粉1束、牛油果2個、車厘茄10粒、檸檬1個、洋蔥1個、百里香1束
                     </span>
                   </td>
@@ -750,11 +751,10 @@
         </tr>
       </tbody>
     </table>
-    <!-- end main story -->
-    <!--
+    <!-- end main story --><!--
     end content bg
-    -->
-    <!-- social -->
+    --><!-- social -->
+
     <table
       align="center"
       bgcolor="#ffffff"
@@ -861,10 +861,10 @@
         </tr>
       </tbody>
     </table>
-    <!-- end social -->
-    <!--
+    <!-- end social --><!--
     footer
     -->
+
     <table
       align="center"
       bgcolor="#ffffff"
@@ -1126,6 +1126,7 @@
     <!--
     end footer
     -->
+
     <p>&nbsp;</p>
   </body>
 </html>
